# abbanoa-water-analysis

./: .dockerignore  .env.example  .env.processing  .env.processing.example  .flake8  .gitignore  .pre-commit-config.yaml  ALL_NODES_RENAMED_SUMMARY.md  AUTHENTICATION_ALTERNATIVES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_DEPLOYMENT_GUIDE.md  DASHBOARD_ENHANCEMENTS_SUMMARY.md  DASHBOARD_FIX_SUMMARY.md  DATE_SELECTOR_IMPROVEMENTS.md  Dockerfile  Dockerfile.api  Dockerfile.api.simple  Dockerfile.dashboard  F401_FIXES_SUMMARY.md  FIX_BLINKING_ISSUE.md  FLOW_DATA_FIX_SUMMARY.md  GCP_ANALYTICS_GUIDE.md  GCP_DATABASE_MIGRATION_GUIDE.md  GKE_TIMESCALEDB_DEPLOYMENT_GUIDE.md  HOURLY_DATA_GENERATOR_SUMMARY.md  MANUAL_AUTH_SETUP.md  MIGRATION_GUIDE.md  Makefile  NODE_RENAMING_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PIPELINE_DOCUMENTATION.md  PM2_USAGE.md  QUALITY_SCORE_SOLUTION.md  README.md  REDIS_CACHE_ARCHITECTURE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.4.md  RELEASE_v1.1.0.0.md  (+78 more)
.github/: dependabot.yml
config/: project_settings.yaml  weather_config.py
database_exports/: abbanoa_db_export_20250718_100153.sql
docs/: ANOMALY_DETECTION_IMPLEMENTATION.md  API_FIXES.md  API_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE_COMPLETE.md  CONSUMPTION_DATA_INTEGRATION_ANALYSIS.md  DASHBOARD_API_MODE.md  DASHBOARD_DEPLOYMENT.md  DASHBOARD_FIXES.md  DOCKER_DEPLOYMENT.md  GCP_AUTHENTICATION.md  HOTFIX-1-SUMMARY.md  HYBRID_ARCHITECTURE.md  INERTIA_OPTIMIZATION_STRATEGY.md  ML_PREDICTIONS_ROADMAP.md  NODE_INTEGRATION_GUIDE.md  OPERATIONS_GUIDE.md  PROCESSING_SERVICES.md  PUMP_ENERGY_ANALYSIS.md  README.md  RELEASE_PROTOCOL.md  SECURITY.md  SETUP_BIGQUERY_AUTH.md  SETUP_GUIDE.md  THERMAL_EXPANSION_ENERGY_RECOVERY.md  TROUBLESHOOTING.md  WATER_CONSUMPTION_FORECASTING.md  data_sources.md  functional-scope.md  kpi-definitions.md  new_architecture.md
frontend/: AUTHENTICATION.md  Dockerfile.prod  README.md  jest.config.js  jest.setup.js  next.config.js  next.config.ts  package.json
jobs/: backfill.py  etl_collect_meter.py  validate_schema.py
k8s/: backup-cronjob.yaml  database-import-job.yaml  namespace-and-config.yaml  postgres-service.yaml  postgres-statefulset.yaml  storage.yaml
legacy/: README.md  analysis_simple.py  analyze_quality.py  bigquery_pipeline.py  bigquery_teatinos_importer.py  data_normalizer.py  gcp_analytics_setup.py  hidroconta_normalizer.py  improved_normalizer.py  phase2_eda.py  phase3_ml_recommendations.py  prophet_prototype.py  simple_dashboard.py  streamlit_dashboard.py  time_series_analysis.py
mock-backend/: README.md  package.json
nginx/: nginx.conf  nginx.dev.conf
notebooks/: execute_forecast_baseline.py  forecast_baseline.sql  simulate_forecast_pipeline.py
scripts/: INTEGRATION_SUMMARY.md  README_BACKUP_INTEGRATION.md  README_consumption_generator.md  abbanoa-dashboard.service  add_node_coordinates.py  analyze_csv_volumes.py  analyze_data_patterns.py  analyze_node_volumes.py  check_data_dates.py  compute_metrics.py  create_user_tables.sql  diagnose_data_issues.py  direct_sync_sensor_data.py  download-existing-key.sh  fill_data_gaps.py  fix_bigquery_view.py  fix_dependencies.sh  force_initial_processing.py  (+55 more)
(+269 files in other folders)
